turtleart.diskfour.DiskFour.scala.code
override def run() {
  setColor(Color.black);
  for (i<-1 to 90) {
    forward(100);
    backward(100);
    right(1);
  }
  
  setColor(Color.red);
  for (i<-1 to 90) {
    forward(100);
    backward(100);
    right(1);
  }
  
  setColor(Color.yellow);
  for (i<-1 to 90) {
    forward(100);
    backward(100);
    right(1);
  }
  
  setColor(Color.purple);
  for (i<-1 to 90) {
    forward(100);
    backward(100);
    right(1);
  }
}